--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -18,9 +18,13 @@ button {
   background-color: #0069AA;
   color: white;
   text-align: center;
-  width: 10%;
+  width: 14%;
   height: 3.5em;
+  padding: 1em;
   border-radius: 10px;
+  font-family: "Trebuchet MS", "Helvetica", sans-serif;
+  font-weight: bold;
+  font-size: 1.1em;
 }
 
 #name{
@@ -71,4 +75,15 @@ button {
 
 .mentor-button {
   margin: 1em 3.5em 1em 3.5em;
+}
+
+.project-button {
+  margin: 1em 2em 1em 2em;
+}
+
+.our-projects {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
 }
