--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,5 +1,7 @@
 *{
   text-align: center;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 
@@ -115,6 +117,28 @@ p {
   align-items: center;
   justify-content: center;
 
+}
+.ted-cell{
+   width: 66%;
+   height: 200px;
+   margin-right: 10px;
+   counter-increment: gallery-cell;
+}
+.ted-cell::before{
+  display: block;
+  text-align: center;
+  content: counter(ted-cell);
+  line-height: 200px;
+}
+footer {
+  background-color: #CFCFCF;
+  width: 100%;
+  height: 2.0em;
+  color: #FFFFFF;
+  bottom: 0;
+  left: 0;
+  z-index: 2;
+  font-weight: bold;
 }
 
 
