styling and scaling new links

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -79,6 +79,9 @@ p {
   height: 1.0em;
   width: 1.0em;
 }
+#profile-link{
+  color: #FFFFFF;
+}
 #programmer-buttons{
   display: flex;
   flex-direction: row;
