--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -3,8 +3,6 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-
-
 nav{
   font-weight: bold;
   font-size: 1.1em;
@@ -17,7 +15,9 @@ nav{
   color: #FFFFFF;
   padding: 0.5em;
 }
-
+section {
+  padding: 5% 0 5% 0;
+}
 #options a {
   color: white;
   text-decoration: none;
@@ -74,7 +74,7 @@ p {
   padding: 1.0em;
 }
 /*headshot will be changed from a box to an image later*/
-#headshot{
+#headshot img{
   background-color: #C4C4C4;
   height: 1.0em;
   width: 1.0em;
