--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -60,6 +60,10 @@ p {
 #events{
   padding-top: 5%;
 }
+#events iframe {
+  width: 90%;
+  height: 80vh;
+}
 #exec-board{
   display: flex;
   flex-direction: row;
@@ -71,16 +75,26 @@ p {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 1.0em;
+  padding: 0.5em;
 }
 /*headshot will be changed from a box to an image later*/
 #headshot img{
-  background-color: #C4C4C4;
-  height: 1.0em;
-  width: 1.0em;
+  height: 10.0em;
+  width: 10.0em;
 }
 #profile-link{
   color: #FFFFFF;
+}
+#exec-buttons{
+  flex-direction: row;
+}
+#exec-buttons *{
+  text-decoration: none;
+  color: #0069AA;
+  padding: 0.5em;
+  width: 25%;
+  border-radius: 15px;
+  margin: 1%;
 }
 #programmer-buttons{
   display: flex;
@@ -96,6 +110,7 @@ p {
   width: 25%;
   border-radius: 15px;
   margin: 1%;
+  flex-direction: row;
 }
 
 .heading, p {
@@ -123,7 +138,6 @@ p {
 }
 .ted-cell{
    width: 66%;
-   height: 200px;
    margin-right: 10px;
    counter-increment: gallery-cell;
 }
