--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -145,6 +145,8 @@ p {
    height: 100%;
    margin-right: 2.5%;
    counter-increment: gallery-cell;
+   top: 50%;
+   transform: translateY(-50%);
 }
 .ted-cell::before{
   display: block;
