--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -10,20 +10,6 @@ body {
 section {
   padding: 2.5% 0 2.5% 0;
 }
-
-p {
-  margin-left: 5em;
-  margin-right: 5em;
-}
-
-#name{
-  width: 25%;
-  float: left;
-}
-#options{
-  width: 75%;
-  float: right;
-}
 #events{
   padding-top: 1.5%;
 }
@@ -31,36 +17,18 @@ p {
   width: 90%;
   height: 80vh;
 }
-#exec-board{
+#execs{
   display: flex;
   flex-direction: row;
-  align-items: center;
   justify-content: center;
 }
-#exec-board *{
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  padding: 0.5em;
+#execs .card{
+  margin: 1%;
 }
-#headshot img{
-  height: 10.0em;
-  width: 10.0em;
-  border-radius: 50%;
-}
-#profile-link{
-  color: #FFFFFF;
-}
-#exec-buttons{
-  flex-direction: row;
-}
-#exec-buttons *{
+#exec-button{
   text-decoration: none;
   color: #0069AA;
-  padding: 0.5em;
   width: 25%;
-  border-radius: 15px;
   margin: 1%;
 }
 #programmer-buttons{
@@ -79,29 +47,21 @@ p {
   margin: 1%;
   flex-direction: row;
 }
-
-.heading, p {
-  color: #0069AA;
-  font-family: "Trebuchet MS", "Helvetica", sans-serif;
-  font-weight: bold;
-}
-
-.mentor-button {
-  margin: 1em 3.5em 1.5em 3.5em;
-  flex-direction: column;
-  flex-wrap: wrap;
-}
-
-.project-button {
-  margin: 1em 2em 1em 2em;
-}
-
-.our-projects {
+#projects{
+  height: 25vh;
+  padding-top: 2.5%;
+  padding-bottom: 5%;
   display: flex;
   flex-direction: row;
+  text-align: center;
+  justify-content: center;
+}
+.our-projects {
+  display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-
+  min-width: 25%;
 }
 .ted-embed{
   height: 75vh;
@@ -127,76 +87,5 @@ p {
 }
 footer {
   background-color: #C4C4C4;
-  width: 100%;
-  height: 1.5em;
   color: #FFFFFF;
-  font-weight: bold;
-  font-size: 0.75em;
-  margin-left: 0;
-  margin-right: 0;
-}
-
-
-/* formatting for small-medium screens and landscape mode on phones */
-@media only screen and (max-width: 768px){
-  button{
-    flex-wrap: wrap;
-    text-align: center;
-    width: auto;
-  }
-
-  .our-projects h3{
-    flex-basis: 100%;
-  }
-
-  .our-projects{
-    flex-wrap: wrap;
-  }
-
-  #exec-board{
-    flex-flow: column wrap;
-  }
-
-}
-
-/* formatting for small window size or mobile applications */
-@media only screen and (max-width: 480px){
-  button{
-    flex-wrap: wrap;
-    flex-grow: 1;
-    align-items: center;
-    width: 75%;
-    height: 60%;
-  }
-
-  p{
-    width: 90%;
-    margin: auto;
-  }
-
-  .mentor-button{
-    margin-left: auto;
-    margin-right: auto;
-    align-items: center;
-  }
-
-  .our-projects{
-    flex-direction: column;
-  }
-
-  #exec-board{
-    flex-wrap: wrap;
-    flex-direction: column;
-    width: auto;
-  }
-
-  #programmer-buttons{
-    flex-direction: column;
-    flex-wrap: wrap;
-  }
-
-  #programmer{
-    width:75%;
-  }
-
 }
