--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -38,15 +38,6 @@ section {
   align-self: center;
   justify-content: center;
 }
-/*#programmer{
-  color: #FFFFFF;
-  background-color: #0069AA;
-  padding: 0.5em;
-  width: 25%;
-  border-radius: 15px;
-  margin: 1%;
-  flex-direction: row;
-}*/
 #projects{
   height: 25vh;
   padding-top: 2.5%;
@@ -88,4 +79,17 @@ section {
 footer {
   background-color: #C4C4C4;
   color: #FFFFFF;
+  font-size: x-large !important;
+}
+footer .navbar-brand{
+  font-size: small;
+}
+#footer{
+  display: flex;
+  flex-direction: column;
+}
+#icons{
+  width: 100%;
+  height: 100%;
+  overflow: auto;
 }
