--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -1,7 +1,7 @@
 @media screen and (min-width: 768px){
   #logo{
-    width: 25%;
-    height: 25%;
+    width: 30%;
+    height: 100%;
     padding-left: 2.5%;
     float: left;
   }
@@ -40,13 +40,12 @@
     flex-direction: row;
   }
   .ted-embed{
-    height: 75vh;
+    height: 100%;
     vertical-align: middle;
   }
   #about{
     height: 80vh;
     margin: auto;
-    margin-top: 2.5%;
     margin-bottom: 2.5%;
   }
   #execs{
@@ -63,7 +62,7 @@
 @media screen and (max-width: 768px) and (min-width: 481px){
   #logo{
     width: 25%;
-    height: 25%;
+    height: 100%;
     padding-left: 2.5%;
     float: left;
   }
@@ -109,7 +108,7 @@
     margin-bottom: 2.5%;
   }
   .ted-embed{
-    height: 50vh;
+    height: 100%;
     vertical-align: middle;
   }
   #execs{
@@ -128,7 +127,7 @@
 @media screen and (max-width: 480px){
   #logo{
     width: 50%;
-    height: 50%;
+    height: 100%;
     padding-left: 2.5%;
     float: left;
   }
@@ -163,6 +162,10 @@
     display: flex;
     flex-direction: row;
   }
+  .ted-embed{
+    height: 100%;
+    vertical-align: middle;
+  }
   #join iframe{
     width: 90%;
     height: 1350px;
@@ -189,11 +192,18 @@
     width: 100%;
     height: 1400px;
   }
+  .ted-embed{
+    height: 100%;
+    vertical-align: middle;
+  }
 }
 *{
   text-align: center;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
+}
+.flickity-page-dots{
+  display: none;
 }
 body {
   height: 100vh;
@@ -204,6 +214,11 @@ section {
 }
 .container-fluid{
   flex-wrap: nowrap !important;
+}
+#navbar-brand{
+  height: 100%;
+  display: flex;
+  flex-direction: row;
 }
 #events{
   padding-top: 1.5%;
@@ -220,6 +235,7 @@ section {
 #meeting-content{
   padding-top: 2.5%;
   padding-bottom: 5%;
+  height: 100%;
 }
 #meeting-content .heading{
   padding-top: 2.5%;
@@ -227,7 +243,7 @@ section {
 }
 .ted-cell{
    width: 75%;
-   height: 100%;
+   height: 25vw;
    margin-right: 2.5%;
    counter-increment: gallery-cell;
    top: 50%;
@@ -241,7 +257,7 @@ section {
 }
 #about{
   background:#f8f9fa;
-  padding: 5%;
+  margin: 5%;
 }
 #execs .card{
   margin: 1%;
